--- a/packages/code-kitchen/src/styles.css
+++ b/packages/code-kitchen/src/styles.css
@@ -14,13 +14,6 @@
   border: 1px solid var(--code-kitchen-border-color);
   display: flex;
   position: relative;
-  /* min-height: fit-content; */
-}
-
-.code-kitchen-root,
-.code-kitchen-root :is(*, ::after, ::before) {
-  box-sizing: border-box;
-  margin: 0;
 }
 
 .code-kitchen-preview-panel-header,
@@ -269,8 +262,7 @@
   flex-flow: column;
 }
 
-.code-kitchen-root[data-dir="v"]
-  :is(.code-kitchen-files-editor-panel, .code-kitchen-preview-panel) {
+.code-kitchen-root[data-dir="v"] .code-kitchen-files-editor-panel {
   width: 100%;
   height: 50%;
   min-height: 320px;
