--- a/packages/code-kitchen/src/styles.css
+++ b/packages/code-kitchen/src/styles.css
@@ -52,6 +52,7 @@
 }
 
 .code-kitchen-files-editor-panel-header-tab {
+  cursor: pointer;
   margin: 2px 2px 0;
   padding: 0 8px;
   display: flex;
@@ -266,6 +267,7 @@
   width: 100%;
   height: 50%;
   min-height: 320px;
+  flex: 1;
 }
 
 .code-kitchen-root[data-dir="v"] .code-kitchen-files-editor-panel {
@@ -276,6 +278,11 @@
   .code-kitchen-preview-panel-header {
   border-top-left-radius: var(--code-kitchen-border-radius);
   border-top-right-radius: var(--code-kitchen-border-radius);
+}
+
+.code-kitchen-portal {
+  position: relative;
+  z-index: 99999;
 }
 
 /*********/
