--- a/packages/code-kitchen/src/styles.css
+++ b/packages/code-kitchen/src/styles.css
@@ -149,6 +149,7 @@
 .code-kitchen-preview-panel-header {
   position: sticky;
   top: 0;
+  left: 0;
   align-items: center;
   padding: 0 var(--code-kitchen-preview-padding);
   background-color: rgb(247 248 248);
